[package]
name = "leekoq"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Ali-Mirghasemi/keeloq"
authors = ["Ali Mirghasemi <ali.mirghasemi1376@gmail.com>"]
categories = ["encoding", "no-std"]
description = "This project is an open source pure `Rust` implementation of Microchip's KeeLoq proprietary"
keywords = ["keeloq", "leekoq", "no_std"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

